View Issue Details

IDProjectCategoryView StatusLast Update
0027354Open CASCADEOCCT:Visualizationpublic2016-12-09 16:37
ReporterduvAssigned Tobugmaster  
PrioritylowSeverityfeature 
Status closedResolutionfixed 
Product Version7.0.0 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027354: Visualization: TKOpenGl - add missing OpenGl_TextureBufferArb initializers for data in GLushort and GLubyte formats
DescriptionNot all variants of Init function of OpenGl_VertexBuffer are also supported by OpenGl_TextureBufferArb.
Steps To ReproduceNot required
TagsNo tags attached.
Test case number

Activities

git

2016-04-05 12:26

administrator   ~0052379

Branch CR27354 has been created by duv.

SHA-1: c0cee2059c12337a2e3b7c30dd2abb2c181a495e


Detailed log of new commits:

Author: duv
Date: Tue Apr 5 12:25:13 2016 +0300

    0027354: Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended
    
    All variants of Init function of OpenGl_VertexBuffer are now also supported by OpenGl_TextureBufferArb.

duv

2016-04-05 12:28

developer   ~0052380

Dear kgv,

Please review the patch.

kgv

2016-04-05 13:02

developer   ~0052385

Last edited: 2016-04-05 13:02

+    case 1: myTexFormat = GL_R16I;    break;
+    case 2: myTexFormat = GL_RG16I;   break;
+    case 3: myTexFormat = GL_RGB16I;  break;
+    case 4: myTexFormat = GL_RGBA16I; break;

these formats are not yet declared for OpenGL ES 2.0 in OpenGl_GlFunctions.hxx - compilation will fail on Android. Please update OpenGl_GlFunctions.hxx.

git

2016-04-05 14:02

administrator   ~0052394

Branch CR27354_1 has been created by duv.

SHA-1: bcdffddfcd49ad129e18133822a699460d401095


Detailed log of new commits:

Author: duv
Date: Tue Apr 5 12:25:13 2016 +0300

    0027354: Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended
    
    All variants of Init function of OpenGl_VertexBuffer are now also supported by OpenGl_TextureBufferArb.
    Missing texture formats added to OpenGl_GlFunctions.hxx.

duv

2016-04-05 14:03

developer   ~0052395

Dear kgv,

Please review the patch in CR27354_1.

kgv

2016-04-05 14:33

developer   ~0052398

Please check compilation (including Android), testing is not needed.

git

2016-04-17 12:57

administrator   ~0052795

Branch CR27354 has been deleted by kgv.

SHA-1: c0cee2059c12337a2e3b7c30dd2abb2c181a495e

git

2016-04-17 12:57

administrator   ~0052796

Branch CR27354_1 has been deleted by kgv.

SHA-1: bcdffddfcd49ad129e18133822a699460d401095

Related Changesets

occt: master df45f8db

2016-04-05 09:25:13

duv


Committer: bugmaster Details Diff
0027354: Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended

All variants of Init function of OpenGl_VertexBuffer are now also supported by OpenGl_TextureBufferArb.
Missing texture formats added to OpenGl_GlFunctions.hxx.
Affected Issues
0027354
mod - src/OpenGl/OpenGl_GlFunctions.hxx Diff File
mod - src/OpenGl/OpenGl_TextureBufferArb.cxx Diff File
mod - src/OpenGl/OpenGl_TextureBufferArb.hxx Diff File

Issue History

Date Modified Username Field Change
2016-04-05 11:55 duv New Issue
2016-04-05 11:55 duv Assigned To => duv
2016-04-05 11:56 duv Summary Visualization: OpenGl_TextureBufferArb should be extended => Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended
2016-04-05 11:56 duv Status new => assigned
2016-04-05 12:26 git Note Added: 0052379
2016-04-05 12:28 duv Note Added: 0052380
2016-04-05 12:28 duv Assigned To duv => kgv
2016-04-05 12:28 duv Status assigned => resolved
2016-04-05 12:28 duv Steps to Reproduce Updated
2016-04-05 13:02 kgv Note Added: 0052385
2016-04-05 13:02 kgv Assigned To kgv => duv
2016-04-05 13:02 kgv Severity minor => feature
2016-04-05 13:02 kgv Status resolved => assigned
2016-04-05 13:02 kgv Summary Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended => Visualization: TKOpenGl - add missing OpenGl_TextureBufferArb initializes for data in GLushort and GLubyte formats
2016-04-05 13:02 kgv Note Edited: 0052385
2016-04-05 14:02 git Note Added: 0052394
2016-04-05 14:03 duv Note Added: 0052395
2016-04-05 14:03 duv Assigned To duv => kgv
2016-04-05 14:03 duv Status assigned => resolved
2016-04-05 14:33 kgv Note Added: 0052398
2016-04-05 14:33 kgv Assigned To kgv => bugmaster
2016-04-05 14:33 kgv Priority normal => low
2016-04-05 14:33 kgv Status resolved => reviewed
2016-04-05 14:33 kgv Summary Visualization: TKOpenGl - add missing OpenGl_TextureBufferArb initializes for data in GLushort and GLubyte formats => Visualization: TKOpenGl - add missing OpenGl_TextureBufferArb initializers for data in GLushort and GLubyte formats
2016-04-08 11:55 bugmaster Changeset attached => occt master df45f8db
2016-04-08 11:55 bugmaster Status reviewed => verified
2016-04-08 11:55 bugmaster Resolution open => fixed
2016-04-17 12:57 git Note Added: 0052795
2016-04-17 12:57 git Note Added: 0052796
2016-12-09 16:33 aiv Status verified => closed
2016-12-09 16:37 aiv Fixed in Version => 7.1.0