0027354: Visualization: TKOpenGl - OpenGl_TextureBufferArb API should be extended

All variants of Init function of OpenGl_VertexBuffer are now also supported by OpenGl_TextureBufferArb.
Missing texture formats added to OpenGl_GlFunctions.hxx.